[package]
name = "prometheus-http-exporter"
version = "0.1.1"
edition = "2024"
description = "Configurable exporter for HTTP-based prometheus metrics"
repository = "https://github.com/MCOfficer/prometheus-http-exporter"
authors = ["MCOfficer"]
license = "MIT"
keywords = ["prometheus", "prometheus-exporter", "metrics"]
categories = ["web-programming::http-server", "web-programming::http-client"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
regex = "1"
jq = "0.1.0"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "charset", "gzip"] }
schemars = { version = "1.1.0", optional = true }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread"] }
tokio-cron-scheduler = { version = "0.14", features = ["english", "signal"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = "0.3"

[features]
default = []
generate-schema = ["dep:schemars"] # Use to generate a json schema

[profile.release]
lto = true
